[tool.poetry]
name = "pytezos"
version = "3.5.2"
description = "Python toolkit for Tezos"
license = "MIT"
authors = ["Michael Zaikin <mz@baking-bad.org>", "Arthur Breitman", "Roman Serikov"]
readme = "README.md"
repository = "https://github.com/baking-bad/pytezos"
homepage = "https://pytezos.org"
keywords = ['tezos', 'blockchain', 'sdk', 'michelson', 'repl', 'cryptocurrencies', 'smart-contracts', 'jupyter']
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: System :: Shells",
    "Framework :: IPython",
    "License :: OSI Approved :: MIT License",

]
packages = [
    { include = "pytezos", from = "src" },
    { include = "michelson_kernel", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
attrs = "^21.4.0"
base58 = "^2.1.1"
bson = "^0.5.10"
cached-property = "^1.5.2"
cattrs = "^22.1.0"
click = "^8.0.3,<=8.0.4"
deprecation = "^2.1.0"
docker = "^5.0.3"
fastecdsa = "^2.2.3"
ipykernel = "^6.6.0"
jsonschema = "^4.3.2"
jupyter-client = "^7.1.0"
mnemonic = "^0.20"
netstruct = "^1.1.2"
notebook = "^6.4.6"
pendulum = "^2.1.2"
ply = "^3.11"
pyblake2 = "^1.1.2"
py-ecc = "^6.0.0"
pysha3 = "^1.0.2"
pysodium = "^0.7.10"
requests = "^2.26.0"
secp256k1 = "^0.14.0"
simplejson = "^3.17.6"
strict-rfc3339 = "^0.7"
tabulate = "^0.8.9"
testcontainers = "^3.4.2"
tqdm = "^4.62.3"
typing-extensions = "^4.0.1"
python-dateutil = "^2.8.2"
types-python-dateutil = "^2.8.10"

[tool.poetry.dev-dependencies]
parameterized = "^0.8.1"
Sphinx = "^5.0.0"
sphinx-rtd-theme = "^1.0.0"
sphinx-sitemap = "^2.2.0"
sphinxcontrib-googleanalytics = "^0.1"
bump2version = "^1.0.1"
pylint = "^2.12.2"
pylint-exit = "^1.2.0"
isort = "^5.10.1"
mypy = "^0.960"
diff-cover = "^6.4.4"
black = "^22.3.0"
coverage = "^6.2"
sphinx-click = "^4.1.0"
types-tabulate = "^0.8.4"
types-requests = "^2.26.3"
types-simplejson = "^3.17.2"
pytest-cov = "^3.0.0"
pytest = "^7.1.2"

[tool.poetry.scripts]
pytezos = 'pytezos.cli.cli:cli'
michelson-kernel = 'michelson_kernel.cli:cli'

[tool.isort]
line_length = 140

[tool.black]
line-length = 140
target-version = ['py37', 'py38']
skip-string-normalization = true

[build-system]
requires = ["poetry_core>=1.0.0", "cryptography==3.3.2", "wheel", "pkginfo"]
build-backend = "poetry.core.masonry.api"
