[tool.poetry]
name = "pytezos"
version = "3.6.0"
description = "Python toolkit for Tezos"
license = "MIT"
authors = ["Michael Zaikin <mz@baking-bad.org>", "Arthur Breitman", "Roman Serikov"]
readme = "README.md"
repository = "https://github.com/baking-bad/pytezos"
homepage = "https://pytezos.org"
keywords = ['tezos', 'blockchain', 'sdk', 'michelson', 'repl', 'cryptocurrencies', 'smart-contracts', 'jupyter']
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: System :: Shells",
    "Framework :: IPython",
    "License :: OSI Approved :: MIT License",

]
packages = [
    { include = "pytezos", from = "src" },
    { include = "michelson_kernel", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
attrs = "^21.4.0"
base58 = "^2.1.1"
bson = "^0.5.10"
cattrs = "^22.1.0"
click = "^8.0.3,<=8.0.4"
deprecation = "^2.1.0"
docker = "^5.0.3"
# FIXME: Broken `cattrs` dependency
exceptiongroup = "^1.0.0-rc.8"
fastecdsa = "^2.2.3"
ipykernel = "^6.6.0"
jsonschema = "^4.3.2"
jupyter-client = "^7.1.0"
mnemonic = "^0.20"
netstruct = "^1.1.2"
notebook = "^6.4.6"
pendulum = "^2.1.2"
ply = "^3.11"
pyblake2 = "^1.1.2"
py-ecc = "^6.0.0"
pysha3 = "^1.0.2"
pysodium = "^0.7.10"
python-dateutil = "^2.8.2"
requests = "^2.26.0"
secp256k1 = "^0.14.0"
simplejson = "^3.17.6"
strict-rfc3339 = "^0.7"
tabulate = "^0.8.9"
testcontainers = "^3.4.2"
tqdm = "^4.62.3"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
bump2version = "^1.0.1"
diff-cover = "^6.5.0"
flake8-return = "^1.1.3"
flake8-comprehensions = "^3.8.0"
flake8-bugbear = "^22.1.11"
flake8-simplify = "^0.19.2"
flakeheaven = "^2.0.0"
isort = "^5.9.3"
mypy = "^0.961"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
Sphinx = "^5.0.0"
sphinx-click = "^4.1.0"
sphinxcontrib-googleanalytics = "^0.1"
sphinx-rtd-theme = "^1.0.0"
sphinx-sitemap = "^2.2.0"
types-python-dateutil = "^2.8.10"
types-PyYAML = "^6.0.9"
types-requests = "^2.26.3"
types-setuptools = "^57.4.17"
types-simplejson = "^3.17.2"
types-tabulate = "^0.8.4"
parameterized = "^0.8.1"
PyYAML = "^6.0"

[tool.poetry.scripts]
pytezos = 'pytezos.cli.cli:cli'
michelson-kernel = 'michelson_kernel.cli:cli'

[tool.isort]
line_length = 120
force_single_line = true

[tool.black]
line-length = 120
target-version = ['py38', 'py39', 'py310']
skip-string-normalization = true

[tool.flakeheaven]
format = "colored"
max_line_length = 120
show_source = true
extended_default_ignore = []

[tool.flakeheaven.plugins]
"flake8-*" = ["+*", "-C417", "-SIM106", "-SIM114", "-SIM102", "-R504"]
flake8-docstrings = ["-*"]

[build-system]
requires = ["poetry_core>=1.0.0", "cryptography==3.3.2", "wheel", "pkginfo"]
build-backend = "poetry.core.masonry.api"
